# domain-mcp-template

./: .containerignore  .flake8  .gitignore  .gitlab-ci.yml  AGENTS.md  CONTRIBUTING.md  Containerfile  IMPLEMENTATION_PLAN.md  README.md  config-elasticsearch-example.json  config-horreum-example.json  pyproject.toml  pytest.ini  requirements.txt
.githooks/: pre-commit
.github/: CODEOWNERS  CONTRIBUTING.md  MIRROR_SETUP.md  dependabot.yml  pull_request_template.md
docs/: DEVELOPERS.md  EXAMPLE_DOMAIN.md  EXAMPLE_SCENARIO.md  README.md  SOURCE_MCP_QUICKSTART.md  example_queries_template.md  llm-capability-audit.md  llm-integration.md  llm-query-testing.md  testing-guide.md  testing-with-claude-desktop.md
scripts/: build_multiarch.sh  container_e2e.sh  generate_schemas.py  mcp-http-proxy.mjs  quick-validate.sh  test_plugin.py  verify_connection.py
src/: __init__.py  __version__.py
tests/: conftest.py  test_adapter_logging.py  test_adapter_types.py  test_aggregation.py  test_backpressure.py  test_boot_time_dimensions.py  test_boot_time_multi_sample.py  test_boot_time_plugin.py  test_cli_lifecycle.py  test_container_e2e_scaffold.py  test_elasticsearch_adapter_smoke.py  test_get_key_metrics_plan.py  test_get_key_metrics_raw.py  test_horreum_adapter_smoke.py  test_horreum_mcp_health.py  test_http_capabilities.py  test_http_config_error_container.py  test_http_config_visibility.py  test_http_container_diagnostics.py  test_http_endpoints.py  test_http_error_responses.py  test_http_guidance_and_capabilities_log.py  test_http_mcp_over_http.py  test_llm_client.py  (+18 more)
(+67 files in other folders)
