[project]
name = "domain-mcp-server"
version = "0.1.0"
description = "Domain-specific Model Context Protocol (MCP) server template"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = '''
(
  ^\.git
  | ^\.venv
  | ^venv
  | ^build
  | ^dist
  | ^schemas
  | ^docs
)
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["src"]
src_paths = ["src", "tests", "scripts"]


[tool.pytest.ini_options]
pythonpath = [
  "src",
]
asyncio_mode = "auto"

